--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       #- docker build --tag $REPOSITORY:$latest .
-      - docker build --tag https://github.com/ashutosh19021993/eksci.git:latest
+      - docker build --tag https://github.com/ashutosh19021993/eksci.git:latest .
 
   post_build:
     commands:
