--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,11 +21,12 @@ phases:
   build:
     commands:
       #- docker build --tag $REPOSITORY:$latest .
-      - docker build  https://github.com/ashutosh19021993/eksci.git#hello:latest .
-
+      #- docker build  https://github.com/ashutosh19021993/eksci.git#hello:latest .
+      - docker build -t eks-test-1 .
   post_build:
     commands:
-      - docker push $REPOSITORY:$TAG
+      #- docker push $REPOSITORY:$TAG
+      - docker push public.ecr.aws/p2w0c5l8/eks-test-1:latest
       - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
       - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
