--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       #- $(aws ecr get-login --no-include-email --region us-east-1)
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/p2w0c5l8
+      - aws ecr-public get-login-password --region us-west-1 | docker login --username AWS --password-stdin public.ecr.aws/p2w0c5l8
       - curl -sS -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/aws-iam-authenticator
       - curl -sS -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.20.4/2021-04-12/bin/linux/amd64/kubectl
       - chmod +x ./kubectl ./aws-iam-authenticator
@@ -16,7 +16,7 @@ phases:
         - echo $TAG
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY:$TAG"'@' Kubernetes/eks-deployment.yml
         #- $(aws ecr get-login --no-include-email)
-        - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/p2w0c5l8
+        - aws ecr-public get-login-password --region us-west-1 | docker login --username AWS --password-stdin public.ecr.aws/p2w0c5l8
         - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
