--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -28,15 +28,15 @@ phases:
     commands:
       #- docker push $REPOSITORY:latest
       - docker push public.ecr.aws/p2w0c5l8/eks-test-1:latest
-      - CREDENTIALS=$( aws sts assume-role --role-arn --region=us-west-1 arn:aws:iam::306274812096:role/service-role/codebuild-testeks-service-role --role-session-name codebuild-kubectl --duration-seconds 900)
+      #- CREDENTIALS=$( aws sts assume-role --role-arn --region=us-west-1 arn:aws:iam::306274812096:role/service-role/codebuild-testeks-service-role --role-session-name codebuild-kubectl --duration-seconds 900)
       #- export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
-      - export AWS_SECRET_ACCESS_KEY="8dynVwmQtuZ11Y97mBQpaWDx306s/9VFpuYkz9+W"
-      - echo $AWS_SECRET_ACCESS_KEY
-      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
-      - echo $AWS_SESSION_TOKEN
-      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
-      - echo $AWS_EXPIRATION
-      - aws eks update-kubeconfig --name eks
+      #- export AWS_SECRET_ACCESS_KEY="8dynVwmQtuZ11Y97mBQpaWDx306s/9VFpuYkz9+W"
+      ##- echo $AWS_SECRET_ACCESS_KEY
+      #- export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+      #- echo $AWS_SESSION_TOKEN
+      #- export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      #- echo $AWS_EXPIRATION
+      #- aws eks update-kubeconfig --name eks
       - kubectl get ns 
       - kubectl apply -f Kubernetes/eks-deployment.yml --kubeconfig /root/.kube/config
       - printf '[{"name":"eks-deployment","imageUri":"%s"}]' $REPOSITORY:$TAG > build.json
