--- a/Kubernetes/eks-deployment.yml
+++ b/Kubernetes/eks-deployment.yml
@@ -15,7 +15,7 @@ spec:
         app.kubernetes.io/name: app-eks-demo
     spec:
       containers:
-      - image: CONTAINER_IMAGE
+      - image: eks-test-1:latest
         imagePullPolicy: Always
         name: app-eks-demo
         ports:
